--- a/customer_review.ipynb
+++ b/customer_review.ipynb
@@ -28,7 +28,7 @@
         "id": "VwK5-9FIB-lu"
       },
       "source": [
-        "# Natural Language Processing"
+        "# **Customer Review System**"
       ]
     },
     {
